# rupert

./: Cargo.toml
crates/rupert-macros/: Cargo.toml
crates/rupert-macros/src/: lib.rs  partial.rs
doc/: configuration.toml  presentation.md
example/: Makefile  finalize  initialize  lib  presentation.md  remote.vim  update
example/page-commands/: 1.vim  2.vim  4.vim
example/scripts/: handle  page-break.lua  pdf-viewer  server.vim
src/: configuration.rs  main.rs  parse.rs  presentation.rs  transform.rs  ui.rs  widget.rs
test-resources/: presentation.md
