[package]
name = "rupert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.15"
crossterm = "0.25"
serde = { version = "1", features = ["derive"] }
syntect = "5.0"
toml = "0.5"
tui = "0.19"
rupert-macros = { path = "crates/rupert-macros" }
