[package]
name = "rupert"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25"
serde = { version = "1", features = ["derive"] }
syntect = "5.2"
toml = "0.9"
tui = "0.19"
rupert-macros = { path = "crates/rupert-macros" }

[dependencies.comrak]
version = "0.40"
default-features = false
